@@ -1,3 +1,8 @@
+2012-06-02  Stipe Tolj  <stolj at kannel.org>
+    * gwlib/http.c: fix possible problems for HTTP/1.1 "Host" header value. We
+      need to remove the port in both cases that contain the standard port
+      values, port 80 for non-SSL and port 443 for SSL-enabled connections.
+    
 2012-05-31 Alexander Malysh <amalysh at kannel.org>
     * doc/userguide/userguide.xml: removed meta-data from smsc group because it
       is not supported there.
